--- a/ChatBox/packages.config
+++ b/ChatBox/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Google_GenerativeAI" version="1.0.2" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net461" />
+  <package id="RJCodeAdvance.RJControls" version="1.0.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net461" />
   <package id="System.Memory" version="4.5.5" targetFramework="net461" />
